# parallel-cpp

exam_prep/: main.cpp  shared_futures.cpp
exam_prep/lock_free_data_structures/: lock_free_stack.cpp  lock_free_stack.h
exam_prep/memory_model/: memory_ordering.cpp  memory_ordering.h  understanding_basics.cpp  understanding_basics.h
exam_prep/synch_constructs/: easy_questions.cpp  easy_questions.h  intermediate_questions.cpp  intermediate_questions.h
exercise1/: CMakeLists.txt  Foo.cpp  Foo.h  main.cpp
exercise2/: CMakeLists.txt  main.cpp
exercise3/: CMakeLists.txt  main  main.cpp
exercise3/task1/: util.h
exercise3/task2/: ThreadSafeCounterDict.h  Utils.h
exercise3/task3/: Utils.h
exercise4/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp
exercise5/: CMakeLists.txt  ThreadSafeArray.cpp  ThreadSafeArray.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  ThreadSafeStack.cpp  ThreadSafeStack.h  main.cpp
exercise6/: CMakeLists.txt  ReadWriteMutex.cpp  ReadWriteMutex.h  main.cpp
exercise7/: AtomicMax.h  CMakeLists.txt  main.cpp  task1.txt  task3.cpp
exercise8/: LockFreeQueue.cpp  LockFreeQueue.h  main.cpp
synchronizing/: CMakeLists.txt  custom_mutex.cpp  custom_mutex.h  custom_synchronization.cpp  custom_synchronization.h  futures_synchronization.cpp  futures_synchronization.h  main.cpp
